[gd_scene load_steps=17 format=3 uid="uid://dhpmb0y01wbj6"]

[ext_resource type="PackedScene" uid="uid://ccssbfj7xoye7" path="res://scenes/base_classes/window.tscn" id="1_vu5fi"]
[ext_resource type="Script" uid="uid://dybxexcv7kjgu" path="res://scenes/settings/settings_window.gd" id="2_qio8b"]
[ext_resource type="FontFile" uid="uid://dua5ebo0y1m30" path="res://assets/fonts/OpenRunde-1.0.1/desktop/OpenRunde-Bold.otf" id="3_qio8b"]
[ext_resource type="PackedScene" uid="uid://c7luvh3c462y8" path="res://scenes/gui_elements/h_tabs.tscn" id="4_v1hle"]
[ext_resource type="PackedScene" uid="uid://2xbxca5boov3" path="res://scenes/gui_elements/field/field_option/field_option.tscn" id="5_lxbbw"]
[ext_resource type="PackedScene" uid="uid://btddcifvnv2c8" path="res://scenes/gui_elements/field/field_text.tscn" id="6_2fxar"]
[ext_resource type="Script" uid="uid://bsgb4p2m4361h" path="res://scenes/gui_elements/field/field_option/option_item.gd" id="6_qio8b"]

[sub_resource type="FontVariation" id="FontVariation_6ni5k"]
base_font = ExtResource("3_qio8b")
variation_opentype = {
1869640570: 20,
2003265652: 700
}

[sub_resource type="LabelSettings" id="LabelSettings_tt6xx"]
font = SubResource("FontVariation_6ni5k")
font_size = 40

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tt6xx"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[sub_resource type="Resource" id="Resource_qio8b"]
script = ExtResource("6_qio8b")
text = "Default Dark"
metadata/_custom_type_script = "uid://bsgb4p2m4361h"

[sub_resource type="Resource" id="Resource_bwnuu"]
script = ExtResource("6_qio8b")
text = "System Default"
metadata/_custom_type_script = "uid://bsgb4p2m4361h"

[sub_resource type="Resource" id="Resource_2btkg"]
script = ExtResource("6_qio8b")
text = "Default Light"
metadata/_custom_type_script = "uid://bsgb4p2m4361h"

[sub_resource type="Resource" id="Resource_ughbm"]
script = ExtResource("6_qio8b")
text = "Ask"
metadata/_custom_type_script = "uid://bsgb4p2m4361h"

[sub_resource type="Resource" id="Resource_78sjy"]
script = ExtResource("6_qio8b")
text = "Don't Ask and Kill"
metadata/_custom_type_script = "uid://bsgb4p2m4361h"

[sub_resource type="Resource" id="Resource_1uhxq"]
script = ExtResource("6_qio8b")
text = "Don't Install and Wait"
metadata/_custom_type_script = "uid://bsgb4p2m4361h"

[node name="Settings" unique_id=2079227305 instance=ExtResource("1_vu5fi")]
position = Vector2i(0, 36)
size = Vector2i(1240, 735)
transient = true
transient_to_focused = true
exclusive = true
script = ExtResource("2_qio8b")

[node name="Background" parent="." index="0" unique_id=1062398829]
focus_behavior_recursive = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background" index="0" unique_id=1785312698]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Background/VBoxContainer" index="0" unique_id=1456987880]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_tt6xx")

[node name="HTabs" parent="Background/VBoxContainer" index="1" unique_id=1960430192 instance=ExtResource("4_v1hle")]
unique_name_in_owner = true
layout_mode = 2
focus_behavior_recursive = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Background/VBoxContainer" index="2" unique_id=1110226507]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_tt6xx")
horizontal_scroll_mode = 0
vertical_scroll_mode = 4

[node name="FoldedContainers" type="VBoxContainer" parent="Background/VBoxContainer/ScrollContainer" index="0" unique_id=684602317]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="Themes" type="FoldableContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers" index="0" unique_id=589939885]
layout_mode = 2
theme_type_variation = &"TransparentFoldable"
title = "Themes"

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/Themes" index="0" unique_id=1407222940]
layout_mode = 2

[node name="app_theme" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/Themes/VBoxContainer" index="0" unique_id=1524644762 instance=ExtResource("5_lxbbw")]
layout_mode = 2
options = Array[ExtResource("6_qio8b")]([SubResource("Resource_qio8b"), SubResource("Resource_bwnuu"), SubResource("Resource_2btkg")])
selection = 1
label = "Set UI Theme"

[node name="Downloads" type="FoldableContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers" index="1" unique_id=64707769]
layout_mode = 2
theme_type_variation = &"TransparentFoldable"
title = "Downloads"

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/Downloads" index="0" unique_id=513455826]
layout_mode = 2

[node name="kill_blender" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/Downloads/VBoxContainer" index="0" unique_id=918094004 instance=ExtResource("5_lxbbw")]
layout_mode = 2
options = Array[ExtResource("6_qio8b")]([SubResource("Resource_ughbm"), SubResource("Resource_78sjy"), SubResource("Resource_1uhxq")])
selection = 2
label = "Kill Blender when installing new version"

[node name="BlenderVersions" type="FoldableContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers" index="2" unique_id=1699979922]
layout_mode = 2
theme_type_variation = &"TransparentFoldable"
title = "Blender Versions"

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/BlenderVersions" index="0" unique_id=777645151]
layout_mode = 2
theme_override_constants/separation = 15

[node name="default_install_location" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/BlenderVersions/VBoxContainer" index="0" unique_id=2075972840 instance=ExtResource("6_2fxar")]
layout_mode = 2
type = 4
text = "C:/Program Files/Blender Foundation"
label = "Default Blender Install Location"

[node name="download_page" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/BlenderVersions/VBoxContainer" index="1" unique_id=1825379108 instance=ExtResource("6_2fxar")]
layout_mode = 2
type = 1
text = "https://www.blender.org/download"
label = "Download Page URL"

[node name="download_repository" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/BlenderVersions/VBoxContainer" index="2" unique_id=548708464 instance=ExtResource("6_2fxar")]
layout_mode = 2
type = 1
text = "https://download.blender.org/release/"
label = "Download Repository URL"

[node name="link_blender_daily" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/BlenderVersions/VBoxContainer" index="3" unique_id=1682408164 instance=ExtResource("6_2fxar")]
layout_mode = 2
type = 1
text = "https://builder.blender.org/download/daily/"
label = "Blender Daily URL"

[node name="link_blender_experimental" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/BlenderVersions/VBoxContainer" index="4" unique_id=169285702 instance=ExtResource("6_2fxar")]
layout_mode = 2
type = 1
text = "https://builder.blender.org/download/daily/"
label = "Blender Experimental URL"

[node name="Projects" type="FoldableContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers" index="3" unique_id=751818783]
layout_mode = 2
theme_type_variation = &"TransparentFoldable"
title = "Projects"

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/Projects" index="0" unique_id=885247898]
layout_mode = 2

[node name="default_project_repository" parent="Background/VBoxContainer/ScrollContainer/FoldedContainers/Projects/VBoxContainer" index="0" unique_id=1655916817 instance=ExtResource("6_2fxar")]
layout_mode = 2
type = 4
text = "D:/Documents/Blender/Projects"
label = "Default Projects Folder"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="child_entered_tree" from="Background/VBoxContainer/ScrollContainer/FoldedContainers" to="." method="_on_folded_settings_child_entered_tree"]
